--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@
         margin: 0;
         font-family: 'Poppins', sans-serif;
         font-size: 14px;
-        line-height: 1.3;
+        line-height: 1.5;
         color: #fff;
         font-weight: 400;
-        background: red;
+        letter-spacing: 0.02em;
     }
 
     .my-container {
@@ -24,9 +24,20 @@
         flex-wrap: wrap;
     }
 
-    .flex-wrapper .col-2 {
+    .col-2 {
         width: 50%;
         position: relative;
+    }
+
+    .my-row {
+        margin-left: -15px;
+        margin-right: -15px;
+        display: flex;
+    }
+
+    .my-row .col-2 {
+        float: left;
+        padding: 0 15px;
     }
 
     h1,
@@ -35,7 +46,7 @@
     h4 {
         font-weight: 700;
         padding: 5px 0;
-        margin:0 0 5px 0;
+        margin: 0 0 5px 0;
         letter-spacing: 0.05em;
         line-height: 1.2;
     }
@@ -52,26 +63,28 @@
     .title-top-line {
         position: relative;
         line-height: 1;
+        display: inline-block;
+        text-transform: uppercase;
+    }
+
+    .title-top-line::before,
+    .title-under-line:after {
+        content: "";
+        background: #f64d70;
+        position: absolute;
+        height: 2px;
     }
 
     .title-top-line::before {
-        content: "";
         width: 70px;
-        height: 2px;
-        background: #f64d70;
-        position: absolute;
         right: 0;
-        top: -7px;
+        top: 0;
     }
 
     .title-under-line:after {
-        content:"";
         width: 200px;
-        height: 2px;
-        background: #f64d70;
-        position: absolute;
         left: 2px;
-        bottom:0;
+        bottom: 0;
     }
 
     img {
@@ -90,19 +103,49 @@
 
 /* ----- */
 
+/* Button */
+    .btn {
+        display: inline-block;
+        line-height: 36px;
+        color: #fff;
+        padding: 0 17px;
+    }
+
+    .btn--primary {
+        border:1px solid #fff;
+    }
+    .btn--primary:hover {
+        background: #fff;
+        color: #f64d70;
+    }
+
+    .btn--active {
+        border: 1px solid #f64d70;
+    }
+
+    .btn--active:hover {
+        border: 1px solid #f64d70;
+        background: #f64d70;
+        color: #fff;
+    }
+
+    .btn i {
+        margin-left: 5px;
+    }
+
+/* ----- */
+
 /* Sumary Profile */
     .summary-info {
         position: absolute;
         bottom: 100px;
         left: 0;
-        padding:0 19.7%;
+        padding: 0 19.7%;
     }
 
     .summary-info h2 {
-        text-transform: uppercase;
-        line-height: 1;
-        margin:0 0 3px 0;
-        padding: 12px 0;
+        margin: 0 0 3px 0;
+        padding: 10px 0;
     }
 
     .summary-position {
@@ -133,6 +176,7 @@
         position: absolute;
         left: 30px;
     }
+/*  ------  */
 
 /* Info Profile */
     .info-profile {
@@ -191,14 +235,380 @@
     .personal-info {
         padding: 0 114px;
     }
-
-    .personal-info h4 {
-        margin:0;
-    }
-
+    
     .personal-info-head {
         text-align: center;
         border-bottom: 2px solid #f64d70;
         padding-bottom: 12px;
+        margin-bottom: 10px;
     }
-/* -----*/
+
+    .personal-info-head h4 {
+        margin: 0;
+    }
+
+    .detail-row {
+        align-items: center;
+        padding: 3px 0;
+    }
+
+    .detail-label {
+        min-width: 80px;
+        margin: 0 24px 0 0;
+    }
+
+    .detail-text {
+        display: inline-block;
+    }
+
+    .info-edit-button {
+        text-align: center;
+        margin-top: 20px;
+    }
+/* ----- */
+
+/* Professional Summary  */
+    .profession-summary-wrapper {
+        background: #2026B2;
+        padding: 50px 0 45px;
+    }
+
+    .profession-summary-title {
+        margin-bottom: 30px;
+    }
+
+    .profession-summary-button-edit {
+        text-align: right;
+        padding-right: 35px;
+        margin-top: 10px;
+    }
+/* ------ */
+
+/* Skill */
+    .skill-wrapper {
+        background: #4A0F73;
+        padding: 50px 0 20px;
+    }
+
+    .skill-title {
+        margin-bottom: 20px;
+    }
+
+    .skill-title--sub {
+        margin-top:20px;
+    }
+
+    .progress-circle-wrapper {
+        width: 33.33%;
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    .skill-progress-circle-button-add {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .skill-progress-circle-button-add .btn {
+        margin-bottom: 20px;
+    }
+
+    .progress-circle-name, 
+    .progress-bar-name {
+        font-weight: 500;
+        text-transform: uppercase; 
+    }
+
+    .skill-progress-bar {
+        padding: 0 30px;
+    }
+
+    .progress-bar-name {
+        margin-bottom: 5px;
+    }
+    
+    .progress-bar-wrapper {
+        margin-bottom: 25px;
+    }
+
+    .progress-bar-wrapper:last-child {
+        margin-bottom: 0;
+    }
+
+    .skill-personal-button-add {
+        text-align: right;
+    }
+/* ----- */
+
+/* Work Experience & Education */
+    .work-education-wrapper {
+        background: #F64C71;
+        padding: 45px 0;
+    }
+
+    .work-education-wrapper .title-top-line::before, 
+    .work-education-wrapper .title-under-line::after {
+        background: #fff;
+    }
+
+    .work-education-case {
+        padding: 0 30px;
+        margin-top: 25px;
+    }
+
+    .work-education-case-box {
+        border-left: 1px solid #fff;
+        padding-left: 50px;
+        padding-bottom: 15px;
+        position: relative;
+    }
+
+    .work-education-case-box::before {
+        content: "";
+        width: 15px;
+        height: 1px;
+        background: #fff;
+        position: absolute;
+        top: 0;
+        left: -7.5px;
+    }
+
+    .work-education-case-box--item {
+        border: 1px solid #fff;
+        position: relative;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
+
+    .work-education-case-box--item:last-child {
+        margin-bottom: 0;
+    }
+
+    .work-education-case-box--item::before {
+        content: "";
+        width: 50px;
+        height: 1px;
+        border-top: 1px dashed #fff;
+        position: absolute;
+        left: -50px;
+        top: calc(50% - 0.5px);
+    }
+
+    .work-education-case-box--item::after {
+        content:"";
+        width: 0;
+        height: 0;
+        border-top: 6px solid transparent;
+        border-bottom: 6px solid transparent;
+        border-left:6px solid #fff;
+        position: absolute;
+        top: calc(50%  - 6px);
+        left: -51px;
+    }
+
+    .work-education-case-box--item--title {
+        position: relative;
+        font-weight: 600;
+        margin-bottom: 7px;
+        text-transform: uppercase;
+    }
+
+    .work-education-case-box--item--title:after {
+        content: "";
+        width: 88px;
+        height: 1px;
+        background: #fff;
+        position: absolute;
+        left:2px;
+        bottom:-1px;
+        letter-spacing: 0.05em;
+    }
+
+    .work-education-case-button-add {
+        text-align: right;
+        margin-top: 10px;
+    }
+/* ----- */
+
+/* Portolio */
+    .portfolio-wrapper {
+        background: #563D67;
+        padding: 46px 0;
+    }
+
+    .portfolio-wrapper .title-top-line::before,
+    .references-wrapper .title-top-line::before {
+        width: 41px;
+    }
+
+    .portfolio-wrapper .title-under-line::after,
+    .references-wrapper .title-under-line::after {
+        width: 72px;
+    }
+
+    .portfolio-tags-list {
+        padding: 0 25px;
+        margin-bottom: 20px;
+    }
+
+    .portfolio-tags-list li {
+        padding: 0 14px;
+    }
+
+    .portfolio-tags-list li a {
+        font-weight: 600;
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+    }
+
+    .portfolio-tags-list li.active a,
+    .portfolio-tags-list li a:hover {
+        text-decoration: underline;
+    }
+
+    .portfolio-tags-list li:first-child {
+        padding-left: 0;
+    }
+
+    .portfolio-tags-list li:last-child {
+        padding-right: 0;
+    }
+
+    .portfolio-images {
+        display: flex;
+        flex-flow: column wrap;
+        max-height: 600px;
+        margin-top: 10px;
+    }
+    
+    .portfolio-images--item {
+        width: 25%;
+    }
+
+    .portfolio-images-button-add {
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+/* ------ */
+
+/* Reference */
+    .references-wrapper {
+        background: #2F2FA1;
+        padding: 46px 0;
+    }
+
+    .references-carousel-images--item {
+        display: flex;
+        align-items: center;
+    }
+    
+    .references-people-avatar {
+        width: 142px;
+        height: 142px;
+        border-radius: 50%;
+        overflow: hidden;
+        border:4px solid #fff;
+    }
+    .references-text {
+        width: calc(100% - 150px);
+    }
+
+    .references-text span {
+        display: block;
+        padding-left: 75px;
+        position: relative;
+    }
+
+    .references-text i {
+        font-size: 80px;
+        font-family: Port Lligat Sans;
+        position: absolute;
+        line-height: 1;
+    }
+
+    .references-text i.first {
+        left: 25px;
+        top: -24px;
+    }
+
+    .references-text span::before, 
+    .references-text span::after {
+        font-family: Port Lligat Sans;
+        font-size: 80px;
+        position: absolute;
+    }
+
+    .references-carousel {
+        padding: 0 125px;
+        position: relative;
+        margin-top: 25px;
+    }
+
+    .owl-dots {
+        display: flex;
+        justify-content: center;
+        margin-top: 21px;
+    }
+
+    .owl-dots .owl-dot {
+        margin: 0 5px;
+    }
+
+    .owl-dots .owl-dot:last-child {
+        margin-right: 0;
+    }
+
+    .owl-dots .owl-dot:first-child {
+        margin-left: 0;
+    }
+
+    .owl-dot > span {
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        background: #fff;
+        border-radius: 50%;
+    }
+
+    .owl-dot.active > span {
+        background: #979797;
+    }
+
+    .owl-controls {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        width: 100%;
+        top: calc(50% - 35px);
+        left: 0;
+    }
+
+    .owl-controls .owl-prev,
+    .owl-controls .owl-next {
+        position: absolute;
+    }
+
+    .owl-controls .owl-prev {
+        left: 85px;
+    }
+
+    .owl-controls .owl-next {
+        right: 85px;
+    }
+
+    .references--button-add {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .copy-right-wrapper {
+        background: #0C0C5E;
+        text-align: center;
+        height: 50px;
+        line-height: 50px;
+    }
+/* ------ */
