--- a/assets/css/progress-circle.css
+++ b/assets/css/progress-circle.css
@@ -15,7 +15,9 @@
   height: 100%;
   border-radius: 50%;
   -webkit-animation: colorload 2s;
-  animation: colorload 2s; }
+  animation: colorload 2s; 
+  transform: rotate(90deg);
+}
 
   .progress-circle span {
     font-size: 14PX;
@@ -346,6 +348,6 @@
     transform: rotate(0deg); }
   100% {
     opacity: 1;
-    transform: rotate(360deg); } }
+    transform: rotate(90deg); } }
 
 /*# sourceMappingURL=progress-circle.css.map */
